plang/testing/logs/false-incorrect/143/program143.p.p
u Wmj5F (MHPt) Kwfz PlOF.

d2 (KF) (Vf).
wS T6A V :- k d9Oj (Bl).

dJjR k z :- egDk (MJs) (Tc) (Z) (k (rzXA (kt5 xO2D xsxx (fdK)) Xf7 Ky3pN SBYn) (C)).

d (Hs5Ct) (fgT (cy) UM7v (Pb)) (V) :- ah (Q) (c) (N9PyS) y; d, o3 (M4) E6gzS (XxuA).

uS1k.
o5GX2 uRgz (w4N (AP) (D)) HH5HO :- m (rwpcf (JkJ) (Z) (v4t) dFk6) q; (mR sa (cGP (Tud)) n (OXGrs); v8 k4tN (er abSQ (fgTzN (q3 (BmdM) (UKfEj)))) (Ok59) (q l8R5 QH8m (D) BvL72)), (dqd (K) (mS (V))), lr (wUc EEhDC (kc)) c A1K (Xh); xO; (fks (Kk7A4) TtT); a.


o (B) QAPxR (MF).

voxh (Ec) (K) Y2Y :- zL (E17q3) pQgp3; jo7T q emWdN; dUvt sf0 (XgK) RQ4, leli (Ecw), h2aYn Ok9kI (Wzp) (P378c), g08C0 (cu (B3O) Wxkrb (bnuCN (x (ybxg zttF wm7 (mS4 (dYe (ibo (sevI) s (xytXb (FKA) (cL3 j L) (YbDP) (oHE38 (x1 W2M (DV)) VGBCk)) (pYH (h3U) q (VEab))) qQ (c (cucg pHju (qE uV0Kw (B2Sv))) bRN IrsSP (od m HL))) (mm) y) (go cs (sBBNO (W2X3)) I1Z9H))) (F) (Esc)) (WU2)) W PU, (zqWN (W1N) FQh RI); kMTA y3R7 (y (WrR3q) AG) Ob5f b; jG6J q (NxKqp) iqDUQ; (oYEZ1 (wLe8 M zTS o3 A) (Gx) (jP (NpM))).

? (hk (cz (Vg2) rLtm)), vMQ4 (zJX) CNe TQzo.


